first version usb Android mode

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -9,7 +9,8 @@
 	<fx:Script>
 		<![CDATA[
 			import com.greensock.TweenMax;
-			
+			// import the package
+			import httpServer.*
 			import flash.filters.BitmapFilterQuality;
 			
 			import mx.events.FlexEvent;
@@ -38,6 +39,8 @@
 			
 			[Bindable]
 			public var simulators:AvailableSimulatorsManager;
+			
+			
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
