--- a/src/renderer/DeviceSettingsWindow.mxml
+++ b/src/renderer/DeviceSettingsWindow.mxml
@@ -202,14 +202,14 @@
 			</s:HGroup>
 		</s:HGroup>
 		
-		<s:HGroup width="100%" gap="3" verticalAlign="middle" verticalCenter="0">
+		<s:HGroup width="100%" gap="3" verticalAlign="middle" verticalCenter="0" visible="false" height="0">
 			<s:HGroup id="androidUsbGroup" width="100%" horizontalAlign="left" verticalAlign="baseline" visible="false">
 				<s:Label fontSize="11" fontWeight="bold" paddingRight="5" text="USB mode :"/>
 				<s:CheckBox id="androidUsb"
 							change="portAutomatic_changeHandler(event)" fontSize="11"
 							fontStyle="normal" textDecoration="none"/>
 			</s:HGroup>
-			</s:HGroup>
+		</s:HGroup>
 
 	</s:VGroup>
 	
