--- a/src/renderer/RunningDeviceRenderer.mxml
+++ b/src/renderer/RunningDeviceRenderer.mxml
@@ -109,7 +109,7 @@
 						 text="The device is not connected to local network" fontStyle="italic" color="0xbc0000" fontSize="11"/>
 			</s:VGroup>
 		</s:HGroup>
-		<s:BitmapImage source="assets/icons/20/{(data as RunningDevice).usbMode?'usb':'wifi'}.png" top="{(data as RunningDevice).usbMode?NaN:0}" bottom="{(data as RunningDevice).usbMode?2:NaN}" left="28"/>
+		<s:BitmapImage source="assets/icons/20/{(data as RunningDevice).usbMode?'usb':'wifi'}.png" top="{(data as RunningDevice).usbMode?NaN:0}" bottom="{(data as RunningDevice).usbMode?2:NaN}" left="{(data as RunningDevice).usbMode?28:27}"/>
 		<s:HGroup right="7" verticalAlign="middle" verticalCenter="0">
 			<s:Group id="homeButton" buttonMode="true" click="goHome(event, (data as RunningDevice))"
 					 toolTip="Device home button" visible="{(data as RunningDevice).status==Device.READY}" alpha="0.0">
